--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>&#x26A7; CockHero Temptation 1-4 &#x26A7;</title>
+    <title>&#x26A7; CockHero &#x26A7;</title>
     <link rel="stylesheet" href="reset.css"/>
     <link rel="stylesheet" href="index.css"/>
     <link rel="shortcut icon" href="favicon.png" type="image/png"/>
 </head>
 <body>
     <header id="header" class="show">
-        <h3>Cock Hero Temptation 1-4</h3>
-        <p>You know the rules. More will be added soon. Don't know who has made this videos, but amy way, if you are reading this, THANK YOU!</p>
-        <a href="https://github.com/a13ks3y/cockhero-temptation" target="_blank">
+        <h1>Cock Hero</h1>
+        <p>You know the rules. More features will be added soon.</p>
+        <a href="https://github.com/a13ks3y/cockhero" target="_blank">
             <img
                     style="position: absolute; top: 0; right: 0; border: 0; z-index: 100500"
                     src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"
@@ -19,16 +19,25 @@
             />
         </a>
         <h3>Options</h3>
-        <h4>Vidoe codes:</h4>
-        <p>Just copy-paste video-code @todo screenshot </p>
+        <label>        
+            <input type="checkbox" id="scale-on-hover">
+            <span>Scale on hover</span>
+        </label>
+        <h4>Video codes</h4>
+        <p>Just copy a code from url and paste in one of the fields below:</p>
         <input class="video-url" type="text" id="video-url-1" value="ph571567833f1e5">
         <input class="video-url" type="text" id="video-url-2" value="409491452">
         <input class="video-url" type="text" id="video-url-3" value="ph57132f2e9c79e">
         <input class="video-url" type="text" id="video-url-4" value="ph59b852804b178">
-        <button>Restore Default</button>
+        <span class="save-load-container">
+            <button>Save</button>
+            <button>Load</button>
+        </span>
+        <!--@todo: export, imoort etc.-->
+        <button>Restore Defaults</button>
     </header>
     <a href="#header" id="hamburger">&#x2630;</a>
-    <main>
+    <main id="main">
         <iframe src="https://www.pornhub.com/embed/ph571567833f1e5?autoplay=1"
                 id="temptation-1"
                 class="temptation"
