url (hash) parsing to share, UX

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
             <span>Scale on hover</span>
         </label>
         <h4>Video codes</h4>
-        <p>Just copy a code from url and paste in one of the fields below:</p>
+        <p>Copy-paste url or viewkey into the fields below:</p>
         <input class="video-url" type="text" id="video-url-1" value="ph571567833f1e5">
         <input class="video-url" type="text" id="video-url-2" value="409491452">
         <input class="video-url" type="text" id="video-url-3" value="ph57132f2e9c79e">
         <input class="video-url" type="text" id="video-url-4" value="ph59b852804b178">
         <span class="save-load-container">
-            <button>Save</button>
-            <button>Load</button>
+            <button id="btn-save">Save</button>
+            <button id="btn-load">Load</button>
         </span>
         <!--@todo: export, imoort etc.-->
-        <button>Restore Defaults</button>
+        <button id="btn-restore">Restore Defaults</button>
     </header>
-    <a href="#header" id="hamburger">&#x2630;</a>
+    <span id="hamburger">&#x2630;</span>
     <main id="main">
-        <iframe src="https://www.pornhub.com/embed/ph571567833f1e5?autoplay=1"
+        <iframe src="https://www.pornhub.com/embed/ph571567833f1e5"
                 id="temptation-1"
                 class="temptation"
                 frameborder="0"
