toggle full screen checkbox

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <input type="checkbox" id="scale-on-hover">
             <span>Scale on hover</span>
         </label>
+        <label>        
+            <input type="checkbox" id="toggle-full-screen">
+            <span>Full screen</span>
+        </label>
         <h4>Video codes</h4>
         <p>Copy-paste url or viewkey into the fields below:</p>
         <input class="video-url" type="text" id="video-url-1" value="ph571567833f1e5">
