make more friendly

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         </label>
         <h4>Video codes</h4>
         <p>Copy-paste url or viewkey into the fields below:</p>
-        <input class="video-url" type="text" id="video-url-1" value="ph571567833f1e5">
-        <input class="video-url" type="text" id="video-url-2" value="409491452">
-        <input class="video-url" type="text" id="video-url-3" value="ph57132f2e9c79e">
-        <input class="video-url" type="text" id="video-url-4" value="ph59b852804b178">
+        <input class="video-url" type="text" id="video-url-1" placeholder="Video hash key e.g. ph571567833f1e5">
+        <input class="video-url" type="text" id="video-url-2" placeholder="Video hash key e.g. 409491452">
+        <input class="video-url" type="text" id="video-url-3" placeholder="Video hash key e.g. ph57132f2e9c79e">
+        <input class="video-url" type="text" id="video-url-4" placeholder="Video hash key e.g. ph59b852804b178">
         <span class="save-load-container">
             <button id="btn-save">Save</button>
             <button id="btn-load">Load</button>
@@ -42,7 +42,7 @@
     </header>
     <span id="hamburger">&#x2630;</span>
     <main id="main">
-        <iframe src="https://www.pornhub.com/embed/ph571567833f1e5"
+        <iframe 
                 id="temptation-1"
                 class="temptation"
                 frameborder="0"
@@ -51,7 +51,7 @@
                 scrolling="no"
                 allowfullscreen>
         </iframe>
-        <iframe src="https://www.pornhub.com/embed/409491452"
+        <iframe 
                 id="temptation-2"
                 class="temptation"
                 frameborder="0"
@@ -60,7 +60,7 @@
                 scrolling="no"
                 allowfullscreen>
         </iframe>
-        <iframe src="https://www.pornhub.com/embed/ph57132f2e9c79e"
+        <iframe 
                 id="temptation-3"
                 class="temptation"
                 frameborder="0"
@@ -69,7 +69,7 @@
                 scrolling="no"
                 allowfullscreen>
         </iframe>
-        <iframe src="https://www.pornhub.com/embed/ph59b852804b178"
+        <iframe 
                 id="temptation-4"
                 class="temptation"
                 frameborder="0"
