--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             <input type="checkbox" id="toggle-full-screen" name="toggle-full-screen">
             <span>Full screen</span>
         </label>
-        <h4>Video codes</h4>
+        <h4>Video codes:</h4>
         <p>Copy-paste url or viewkey into the fields below:</p>
-        <input class="video-url" type="text" id="video-url-1" placeholder="Video hash key e.g. ph571567833f1e5">
-        <input class="video-url" type="text" id="video-url-2" placeholder="Video hash key e.g. 409491452">
-        <input class="video-url" type="text" id="video-url-3" placeholder="Video hash key e.g. ph57132f2e9c79e">
-        <input class="video-url" type="text" id="video-url-4" placeholder="Video hash key e.g. ph59b852804b178">
+        <input class="video-url" type="text" id="video-url-1" placeholder="First video url/hash">
+        <input class="video-url" type="text" id="video-url-2" placeholder="Second video url/hash">
+        <input class="video-url" type="text" id="video-url-3" placeholder="Third video url/hash">
+        <input class="video-url" type="text" id="video-url-4" placeholder="Fourth video url/hash">
         <span class="save-load-container">
             <button id="btn-save">Save</button>
             <button id="btn-load">Load</button>
