--- a/sandbox.html
+++ b/sandbox.html
@@ -4,85 +4,21 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://a13ks3y.github.io/reset.css">
     <title>Sandbox</title>
-    <style type="text/css">
-        html {
-            font-size: 16px;
-            font-family: monospace;
-        }
-        body {
-            background: black;
-        }
-        #hamburger {
-            position: absolute;
-            left: 0;
-            top: 0;
-            background: #f90;
-            border: 1px solid black;
-            margin: 0.666rem;
-            padding: 0.333rem 0.666rem;
-            font-size: 3.333rem;
-            color: black;
-            z-index: 666;
-            cursor: pointer;
-            user-select: none;
-        }
-        header {
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 6.66rem;
-            padding: 1.666rem 0.666rem;
-            background: #f90;
-            /*background: rgba(255,153,0,0.666);*/
-            text-align: center;
-        }
-        header.hidden {
-            transform: translateX(-110%);
-            transition: transform ease-in-out 0.666s;
-        }
-        header.visible {
-            transform: translateX(0%);
-            transition: transform ease-in-out 0.333s;
-        }
-        main {
-            display: grid;
-            grid-template-columns: auto auto;
-            margin: 0;
-            padding: 0;
-            position: absolute;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-        }
-        main iframe {
-            width: 100%;
-        }
-        input[type="text"],
-        input[type="url"] {
-            font-size: 1.666rem;
-            border: 1px solid black;
-        }
-        button {
-            font-size: 1.66rem;
-            background: #f90;
-            color: white;
-            outline: none;
-            border: 1px solid black;
-        }
-    </style>
+    <link href="sandbox.css" rel="stylesheet" type="text/css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <main>
-
-</main>
+    <!-- Videos (iframe or video element) container -->
+    <main class="resizable-on-hover"></main>
     <header>
-        <input id="video-url" type="url" placeholder='Paste video url here "as is"' style="min-width: 50%"/>
+        <input id="video-url" type="url" placeholder='Paste video url here "as is"'/>
         <button id="add-button">Add</button>
-        <button id="clear-all-button">Clear All</button>
+        <div class="block">
+            <button id="clear-all-button">Clear All</button>
+        </div>
     </header>
     <span id="hamburger">&#x2630;</span>
+    <script src="shared.js"></script>
     <script type="text/javascript">
         const hamburgerEl = document.getElementById('hamburger');
         const headerEl = document.getElementsByTagName('header').item(0);
@@ -101,26 +37,20 @@
 
         function addVideo(video) {
             videos.push(video);
-            video.iframe = document.createElement('iframe');
-            video.iframe.src = video.iframeUrl;
-            video.iframe.frameborder = "0";
-            video.iframe.width = "560";
-            video.iframe.height = "340";
-            video.iframe.autoplay = true;
-            video.iframe.scrolling = "no";
-            video.iframe.allowfullscreen = true;
+            video.iframe = createPornHubIframe(video.viewkey)
             mainEl.appendChild(video["iframe"]);
         }
         addButtonEl.addEventListener('click', () => {
             // @todo: add youtube embedded also?
-            // @todo: play from filesystem/localhost? (extention? app? electron?)
+            // @todo: play from filesystem/localhost? (extension? app? electron?)
             const value = videoUrlEl.value;
-            const urlPattern = /https:\/\/www.pornhub(premium)?\.com\/view_video\.php\?viewkey=([^/&]+)/i;
-            const viewkey = urlPattern.test(value) ? value.match(urlPattern)[2] : value;
+            const PORNHUB_VIEWKEY_URL_PATTERN = /https:\/\/www.pornhub(premium)?\.com\/view_video\.php\?viewkey=([^/&]+)/i;
+            const viewkey = PORNHUB_VIEWKEY_URL_PATTERN.test(value) ? value.match(PORNHUB_VIEWKEY_URL_PATTERN)[2] : value;
 
             const iframeUrl = `${location.protocol}//www.pornhub.com/embed/${viewkey}`;
             const video = {
                 url: value,
+                viewkey,
                 iframeUrl
             };
             addVideo(video);
@@ -132,14 +62,18 @@
                 videos.length = 0; // is this legal?!!
                 mainEl.innerHTML = '';
             }
-        })
+        });
         hamburgerEl.addEventListener('click', () => {
             if (headerEl.classList.contains('hidden')) {
                 headerEl.classList.remove('hidden');
                 headerEl.classList.add('visible');
+                hamburgerEl.classList.remove('hidden');
+                hamburgerEl.classList.add('visible');
             } else {
                 headerEl.classList.remove('visible');
                 headerEl.classList.add('hidden');
+                hamburgerEl.classList.remove('visible');
+                hamburgerEl.classList.add('hidden');
             }
         })
     </script>
