mega update, very important changes

--- a/fate.html
+++ b/fate.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>FATE</title>
     <link rel="stylesheet" href="http://a13ks3y.github.io/reset.css">
+    <link rel="stylesheet" href="sandbox.css">
     <style type="text/css">
         #main {
             position: absolute;
