Breaking changes, url sharing, optimal videos count

--- a/sandbox.html
+++ b/sandbox.html
@@ -13,13 +13,15 @@
 </head>
 <body>
     <!-- Videos (iframe or video element) container -->
-    <main class="resizable-on-hover"></main>
+    <!-- todo toggle resizable-on-hover class (option input) -->
+    <main class=""></main>
     <header>
         <input id="video-url" type="url" placeholder='Paste video url here "as is"'/>
         <button id="add-button"><i class="fa fa-plus"></i></button>
         <div class="block">
             <button id="clear-all-button"><i class="fa fa-trash"></i></button>
             <button id="save-to-clipboard-button"><i class="fa fa-copy"></i></button>
+            <button id="share-link-button"><i class="fa fa-share"></i></button>
         </div>
     </header>
     <span id="hamburger">&#x2630;</span>
