--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
             <button id="btn-load">Load</button>
         </span>
         <button id="btn-restore">Restore Defaults</button>
-        <a href="https://a13ks3y.github.io/cockhero/fate.html">Fate (experimental)</a>&nbsp;
-        <a href="https://a13ks3y.github.io/cockhero/sandbox.html"Sandbox (experimental)</a>
+        <p>
+            <a href="https://a13ks3y.github.io/cockhero/fate.html">Fate (experimental)</a>&nbsp;
+            <a href="https://a13ks3y.github.io/cockhero/sandbox.html">Sandbox (experimental)</a>
+        </p>
     </header>
     <span id="hamburger">&#x2630;</span>
     <main id="main">
