--- a/fate.html
+++ b/fate.html
@@ -32,11 +32,9 @@
 <body>
     <main id="main"></main>
     <!--
-       Появилась одна идея, что если сделать декларатичное надмножесто HTML как typescript надмножество JS или angular'овские (да и реактовские) шаблоны - надмножество HTML
-       но это будет DSL (DOMAIN SPECIFIC LANGUAGE)
-       ИСКЛЮЧИТЕЛЬНО ТЛЬКО ДЛЯ ОДНОГО
-       чтобы описывать последовательность роликов.
-       Т.е. язык для написания сценариев управления сложными мулти-видео-презентациями
+       Появилась одна идея, что если сделать декларативное надмножество HTML как typescript надмножество JS или angular'овские (да и реактовские) шаблоны - надмножество HTML, но это будет DSL (DOMAIN SPECIFIC LANGUAGE)
+       ИСКЛЮЧИТЕЛЬНО ТЛЬКО ДЛЯ ОДНОГО, чтобы описывать последовательность роликов.
+       Т.е. язык для написания сценариев управления сложными multi-video-презентациями
        Наверное как-то так.
     -->
     <script src="shared.js"></script>
